--- a/code/trunk/prototype/grails-app/i18n/messages.properties
+++ b/code/trunk/prototype/grails-app/i18n/messages.properties
@@ -1,4 +1,4 @@
-default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
+﻿default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
 default.invalid.creditCard.message=Property [{0}] of class [{1}] with value [{2}] is not a valid credit card number
 default.invalid.email.message=Property [{0}] of class [{1}] with value [{2}] is not a valid e-mail address
@@ -29,18 +29,18 @@ default.not.deleted.message={0} {1} could not be deleted
 default.not.found.message={0} not found with id {1}
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
 
-default.home.label=Home
-default.list.label={0} List
-default.add.label=Add {0}
-default.new.label=New {0}
-default.create.label=Create {0}
-default.show.label=Show {0}
-default.edit.label=Edit {0}
+default.home.label=首页
+default.list.label={0} 列表
+default.add.label=新增 {0}
+default.new.label=新增 {0}
+default.create.label=创建 {0}
+default.show.label=显示详细信息 {0}
+default.edit.label=修改 {0}
 
-default.button.create.label=Create
-default.button.edit.label=Edit
-default.button.update.label=Update
-default.button.delete.label=Delete
+default.button.create.label=新增
+default.button.edit.label=修改
+default.button.update.label=修改
+default.button.delete.label=删除
 default.button.delete.confirm.message=Are you sure?
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
